--- a/app/src/main/res/layout/fragment_attraction_view.xml
+++ b/app/src/main/res/layout/fragment_attraction_view.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".scene.AttractionFragment">
+    tools:context=".scene.AttractionViewFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="경관" />
+        android:text="어트랙션뷰!" />
 
 </FrameLayout>
