--- a/app/src/main/res/layout/fragment_attraction.xml
+++ b/app/src/main/res/layout/fragment_attraction.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".scene.AttractionFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="경관" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
