사진 이미지 슬라이드

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:id="@+id/listFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="org.rtruesoft.kiosk.list.ListFragment"/>
+            android:name="org.rtruesoft.kiosk.ui.list.ListFragment"/>
     </FrameLayout>
 
     <FrameLayout
@@ -32,7 +32,7 @@
             android:id="@+id/viewFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="org.rtruesoft.kiosk.view.ViewFragment"/>
+            android:name="org.rtruesoft.kiosk.ui.view.ViewFragment"/>
     </FrameLayout>
 
 </LinearLayout>
