--- a/app/src/main/res/layout/fragment_attraction.xml
+++ b/app/src/main/res/layout/fragment_attraction.xml
@@ -10,18 +10,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_gravity="bottom">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/photoViewPager"
-            android:clipToPadding="false"
-            android:clipChildren="false"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:clipChildren="false"
+            android:clipToPadding="false" />
 
-    </FrameLayout>
+    </RelativeLayout>
 
 </FrameLayout>
