--- a/app/src/main/res/layout/slider_item.xml
+++ b/app/src/main/res/layout/slider_item.xml
@@ -4,42 +4,58 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:id="@+id/sliderItem">
-
-    
-    <ImageView
-        android:id="@+id/sliderImage"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_weight="1"
-        android:scaleType="centerCrop"/>
-
-    <ImageView
-        android:id="@+id/sliderImage2"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_weight="1"
-        android:scaleType="centerCrop"/>
-    <ImageView
-        android:id="@+id/sliderImage3"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_weight="1"
-        android:scaleType="centerCrop"/>
-    <ImageView
-        android:id="@+id/sliderImage4"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_weight="1"
-        android:contentDescription="@string/app_name"
-        android:scaleType="centerCrop"/>
+        android:layout_weight="1">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_chevron_left_24"/>
+    </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/sliderImage"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="centerCrop"/>
+            <ImageView
+                android:id="@+id/sliderImage2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="50dp"
+                android:layout_weight="1"
+                android:scaleType="centerCrop"/>
+            <ImageView
+                android:id="@+id/sliderImage3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="50dp"
+                android:layout_weight="1"
+                android:scaleType="centerCrop"/>
+            <ImageView
+                android:id="@+id/sliderImage4"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginLeft="50dp"
+                android:contentDescription="@string/app_name"
+                android:scaleType="centerCrop"/>
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_chevron_right_24"/>
+    </LinearLayout>
 </LinearLayout>
