--- a/app/src/main/res/layout/fragment_attraction.xml
+++ b/app/src/main/res/layout/fragment_attraction.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.scene.AttractionFragment">
+    tools:context=".ui.scene.attraction.AttractionFragment">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_View"
