--- a/app/src/main/res/layout/fragment_photo_zone.xml
+++ b/app/src/main/res/layout/fragment_photo_zone.xml
@@ -22,6 +22,13 @@
         android:layout_height="match_parent"
         android:layout_weight="5">
 
+        <GridView
+            android:id="@+id/gridView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:numColumns="4"
+            />
     </LinearLayout>
 
 </LinearLayout>
